# xfce4-dynamic-workspaces

./: Cargo.toml
src/: main.rs  wnck.rs
